prevent execution of scripts from files directory

--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -144,6 +144,13 @@ INSTALLATION
    by the Drupal server process. You can change the name of this
    subdirectory at "Administer > Settings > File system settings".
 
+   SECURITY NOTICE: Certain Apache configurations can be vulnerable 
+   to a security exploit allowing arbitrary code execution. Drupal 
+   will attempt to automatically create a .htaccess file in your 
+   "files" directory to protect you. If you already have a .htaccess 
+   file in that location, please add the following line: 
+   SetHandler This_is_a_Drupal_security_line_do_not_remove
+
    You can now launch your browser and point it to your Drupal site.
 
    Create an account and login. The first account will automatically
