--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -2,6 +2,8 @@
 
 Drupal x.x.x, xxxx-xx-xx (development version)
 ------------------------
+- introduced the ability to alter mail sent from system
+- moved core modules to their own directories to allow additional flexibility
 - added support for different cache backends
 - added support for a generic "sites/all" directory.
 - usability:
