Add installer to changelog

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -2,6 +2,10 @@
 
 Drupal x.x.x, xxxx-xx-xx (development version)
 ------------------------
+- added web-based installer which can:
+    * automatically generate the database configuration file
+    * install pre-made 'install profiles' or distributions
+    * import the database structure with automatic table prefixing
 - introduced the ability to alter mail sent from system
 - moved core modules to their own directories to allow additional flexibility
 - added support for different cache backends
