--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -38,6 +38,7 @@ Drupal x.x.x, xxxx-xx-xx (development version)
     * look for page templates based upon the path.
 - content system:
     * made it easier for node access modules to work well with each other.
+    * added configurable content types.
 
 Drupal 4.7.0, 2006-05-01
 ------------------------
