--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -40,7 +40,9 @@ Drupal x.x.x, xxxx-xx-xx (development version)
     * made it easier for node access modules to work well with each other.
     * added configurable content types.
     * changed node rendering to work with structured arrays.
-- removed the archive module
+- removed the archive module.
+- upgrade system:
+    * created space for update branches.
 
 Drupal 4.7.0, 2006-05-01
 ------------------------
