--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -36,6 +36,7 @@ Drupal x.x.x, xxxx-xx-xx (development version)
 - PHP Template engine:
     * add the ability to look for a series of suggested templates.
     * look for page templates based upon the path.
+    * look for block templates based upon the region, module, and delta.
 - content system:
     * made it easier for node access modules to work well with each other.
     * added configurable content types.
