- Patch #77919 by chx, eaton, moshe, et al: enable programmaticaly submitted forms via the pull model.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -44,6 +44,8 @@ Drupal x.x.x, xxxx-xx-xx (development version)
 - removed the archive module.
 - upgrade system:
     * created space for update branches.
+- forms API:
+    * made it possible to programmatically submit forms.
 - split up and removed drupal.css.
 - added nested lists generation.
 
