--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -19,6 +19,7 @@ Drupal x.x.x, xxxx-xx-xx (development version)
     * reorganized the settings pages.
 - block system:
     * extended the block visibility settings with a role specific settings.
+    * made it possible to customize all block titles.
 - poll module:
     * optionally allow people to inspect all votes.
     * optionally allow people to cancel their vote.
