--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -42,6 +42,9 @@ Drupal x.x.x, xxxx-xx-xx (development version)
     * made it easier for node access modules to work well with each other.
     * added configurable content types.
     * changed node rendering to work with structured arrays.
+- performance:
+    * improved session handling.
+    * omit sidebars when serving a '404 - Page not found'.
 - removed the archive module.
 - upgrade system:
     * created space for update branches.
