--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -46,8 +46,9 @@ Drupal x.x.x, xxxx-xx-xx (development version)
 - performance:
     * improved session handling: reduces database overhead.
     * improved access checking: reduces database overhead.
+    * made it possible to do memcached based session management.
     * omit sidebars when serving a '404 - Page not found': saves CPU cycles and bandwidth.
-    * added an 'aggressive' caching policy. 
+    * added an 'aggressive' caching policy.
 - removed the archive module.
 - upgrade system:
     * created space for update branches.
