--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -22,6 +22,7 @@ Drupal x.x.x, xxxx-xx-xx (development version)
     * improved configurability of the contact forms.
     * reorganized the settings pages.
     * made it easy to investigate popopular search terms
+- integrated urlfilter.module in filter.module
 - block system:
     * extended the block visibility settings with a role specific settings.
     * made it possible to customize all block titles.
