--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -11,7 +11,7 @@ Drupal x.x.x, xxxx-xx-xx (development version)
     * install pre-made 'install profiles' or distributions
     * import the database structure with automatic table prefixing
     * be localized
-- included the jQuery JavaScript library and converted all core JavaScript to use it
+- included the jQuery JavaScript library 1.0.1 and converted all core JavaScript to use it
 - introduced the ability to alter mail sent from system
 - moved core modules to their own directories to allow additional flexibility
 - added support for different cache backends
