--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -21,7 +21,7 @@ Drupal x.x.x, xxxx-xx-xx (development version)
     * made it possible to instantly assign roles to newly created user accounts.
     * improved configurability of the contact forms.
     * reorganized the settings pages.
-    * made it easy to investigate popopular search terms
+    * made it easy to investigate popular search terms
 - integrated urlfilter.module in filter.module
 - block system:
     * extended the block visibility settings with a role specific settings.
