--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,6 @@
 // $Id$
 
-Drupal x.x.x, xxxx-xx-xx (development version)
+Drupal 5.0, xxxx-xx-xx (development version)
 ------------------------
 - completely retooled the administration page
     * /admin now contains an administration page which may be themed
