--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -30,6 +30,7 @@ Drupal 5.0, xxxx-xx-xx (development version)
     * improved configurability of the contact forms.
     * reorganized the settings pages.
     * made it easy to investigate popular search terms
+    * added a 'select all' checkbox and a range select feature to administration tables.
 - integrated urlfilter.module in filter.module
 - block system:
     * extended the block visibility settings with a role specific settings.
