--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,7 +1,11 @@
 // $Id$
 
-Drupal 5.0, xxxx-xx-xx (development version)
+Drupal 6.0, xxxx-xx-xx (development version)
 ------------------------
+
+
+Drupal 5.0, 2007-01-15
+----------------------
 - completely retooled the administration page
     * /admin now contains an administration page which may be themed
     * reorganised administration menu items by task and by module
