--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -2,7 +2,7 @@
 
 Drupal 6.0, xxxx-xx-xx (development version)
 ------------------------
-
+- made it easier to theme the forum overview page
 
 Drupal 5.0, 2007-01-15
 ----------------------
