--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -6,6 +6,7 @@ Drupal 6.0, xxxx-xx-xx (development version)
 - Made it easier to theme the forum overview page.
 - Drupal works with error reporting set to E_ALL.
 - Added scripts/drupal.sh to execute Drupal code from the command line. Useful to use Drupal as a framework to build command-line tools.
+- Used the Garland theme for the installation and maintenance pages.
 
 Drupal 5.0, 2007-01-15
 ----------------------
